# otus-cpp-pro-hw9

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  bulk_8h_source.html  bulk__istream__reader_8h_source.html  bulk__state_8h_source.html  classBulk-members.html  classBulk.html  classBulkIstreamReader-members.html  classBulkIstreamReader.html  classBulkIstreamReader__coll__graph.map  classBulkIstreamReader__coll__graph.md5  classBulk__inherit__graph.map  classBulk__inherit__graph.md5  classConsoleOutput-members.html  classConsoleOutput.html  classConsoleOutput__coll__graph.md5  classConsoleOutput__inherit__graph.map  classFileOutput-members.html  classFileOutput.html  classFileOutput__coll__graph.map  classFileOutput__inherit__graph.md5  classes.html  command_8h_source.html  console__output_8h_source.html  dir_4ae051286ea4b0b0ee20a2ed1d26e601.html  dir_5a30104352ef4255dc24354b02eb2d20.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_a065c5f60305fee3569f887679366939.html  file__output_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  (+26 more)
.github/workflows/: release.yaml
async/: CMakeLists.txt  orchestrator.h  task.cpp  task.h  task_awaitable.h
lib/: CMakeLists.txt
lib/include/: bulk_state.h  istream_reader.interface.h
lib/src/: bulk.h  command.h  file_output.h
lib/tests/: CMakeLists.txt  bulk_tests_unix.cpp
libs/: CMakeLists.txt
libs/async_lib/: CMakeLists.txt  async.cpp  async.h  main.cpp
libs/bulk_lib/: CMakeLists.txt
libs/bulk_lib/include/: bulk_state.h  channel.interface.h  input_reader.interface.h  observable.interface.h  observer.interface.h
libs/bulk_lib/src/: bulk.h  bulk_istream_reader.h  bulk_queue_reader.h  command.h  console_output.h  file_output.h  line_by_line_channel.h
libs/bulk_lib/tests/: CMakeLists.txt  config.h.in
libs/coro_lib/: CMakeLists.txt  task.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
src/: CMakeLists.txt  main.cpp
